--- a/app/src/main/res/layout/activity_location_picker.xml
+++ b/app/src/main/res/layout/activity_location_picker.xml
@@ -23,17 +23,16 @@
         <Button
             android:id="@+id/detectLocation"
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="@dimen/dp40"
             android:layout_margin="@dimen/dp12"
             android:background="@drawable/detect_location_box"
             android:drawableEnd="@drawable/detect_location_icon"
             android:drawableRight="@drawable/detect_location_icon"
             android:gravity="center_vertical"
             android:padding="@dimen/dp10"
-            android:text="Detect my location"
+            android:text="@string/detect_location"
             android:textColor="@color/rating_color"
-            android:textSize="@dimen/sp12"
-            app:customFont="@string/roboto_bold" />
+            android:textSize="@dimen/sp12" />
 
     </RelativeLayout>
 
@@ -45,7 +44,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/locationList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_above="@+id/selectLocationButton"
             android:clipToPadding="false"
             android:fadeScrollbars="false"
@@ -54,10 +53,11 @@
         <Button
             android:id="@+id/selectLocationButton"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/dp40"
+            android:textSize="@dimen/sp16"
             android:layout_alignParentBottom="true"
             android:background="@color/tagColor"
-            android:text="Select this Location"
+            android:text="@string/select_this_location"
             android:textColor="@color/white" />
 
     </RelativeLayout>
