--- a/app/src/main/res/layout/location_row_item.xml
+++ b/app/src/main/res/layout/location_row_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:padding="@dimen/dp8"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
@@ -12,12 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Sahara"
+        android:textSize="@dimen/sp16"
         app:customFont="@string/roboto_regular" />
 
     <com.rescribe.doctor.ui.customesViews.CustomTextView
         android:id="@+id/locationText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp16"
         tools:text="Pune"
         app:customFont="@string/roboto_medium" />
 
