--- a/app/src/main/res/layouts/add_records/layout/content_selected_records.xml
+++ b/app/src/main/res/layouts/add_records/layout/content_selected_records.xml
@@ -34,6 +34,7 @@
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginRight="@dimen/fab_margin"
         android:visibility="gone"
+        tools:visibility="visible"
         app:backgroundTint="@color/recentblue"
         app:srcCompat="@drawable/ic_add_action" />
 
@@ -43,7 +44,7 @@
         android:layout_height="@dimen/dp40"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="@dimen/dp16"
+        android:layout_margin="@dimen/dp14"
         android:background="@drawable/button_selector"
         android:paddingEnd="@dimen/dp50"
         android:paddingStart="@dimen/dp50"
