--- a/app/src/main/res/layouts/add_records/layout/selected_records_item_layout.xml
+++ b/app/src/main/res/layouts/add_records/layout/selected_records_item_layout.xml
@@ -45,6 +45,7 @@
             android:maxLines="2"
             android:layout_alignParentBottom="true"
             android:background="@drawable/curve_edges_caption"
+            android:textCursorDrawable="@drawable/cursor_color"
             android:hint="@string/add_caption"
             android:padding="@dimen/dp6" />
 
