--- a/app/src/main/res/layouts/add_records/layout/content_selected_records.xml
+++ b/app/src/main/res/layouts/add_records/layout/content_selected_records.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/mainRelativeLayout"
     android:fitsSystemWindows="true"
+
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.activities.add_records.SelectedRecordsActivity"
     tools:showIn="@layout/activity_seleted_records">
