--- a/app/src/main/res/layouts/patient/patient_detail_page/layout/patient_detail_activity.xml
+++ b/app/src/main/res/layouts/patient/patient_detail_page/layout/patient_detail_activity.xml
@@ -20,33 +20,72 @@
             <include layout="@layout/common_action_bar" />
         </android.support.design.widget.AppBarLayout>
 
-        <ExpandableListView
-            android:id="@+id/historyExpandableListView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:childDivider="@null"
-            android:divider="@null"
-            android:groupIndicator="@null"
-            android:visibility="gone"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:visibility="visible" />
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/addRecordButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@drawable/button_selector"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/add_record"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp16"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            <ExpandableListView
+                android:id="@+id/historyExpandableListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/addRecordButton"
+                android:layout_alignParentTop="true"
+                android:background="@color/white"
+                android:childDivider="@null"
+                android:divider="@null"
+                android:groupIndicator="@null"
+                android:visibility="gone"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:visibility="visible" />
+
+            <Button
+                android:id="@+id/addRecordButton"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp35"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="@dimen/dp2"
+                android:layout_marginLeft="@dimen/dp2"
+                android:layout_marginBottom="@dimen/dp2"
+                android:layout_toStartOf="@+id/divider"
+                android:layout_toLeftOf="@+id/divider"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/roboto_bold"
+                android:text="@string/add_record"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp14"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="2dp"
+                android:layout_height="0dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/white" />
+
+            <Button
+                android:id="@+id/addNoteButton"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp35"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                android:layout_marginEnd="@dimen/dp2"
+                android:layout_marginRight="@dimen/dp2"
+                android:layout_marginBottom="@dimen/dp2"
+                android:layout_toEndOf="@+id/divider"
+                android:layout_toRightOf="@+id/divider"
+                android:background="@drawable/button_selector"
+                android:fontFamily="@font/roboto_bold"
+                android:text="@string/add_note"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp14"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+        </RelativeLayout>
     </LinearLayout>
-
 
     <include layout="@layout/common_no_records_found" />
 
