--- a/app/src/main/res/menu/pen_info.xml
+++ b/app/src/main/res/menu/pen_info.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
+  <!--  <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"/>-->
 
     <item
         android:id="@+id/action_save"
         android:orderInCategory="100"
         android:title="@string/action_save"/>
+
+    <item
+        android:id="@+id/action_clear_all"
+        android:orderInCategory="100"
+        android:title="@string/action_clear_all"/>
 
     <item
         android:id="@+id/action_disconnect"
