--- a/app/src/main/res/layout/my_appointment_child_item.xml
+++ b/app/src/main/res/layout/my_appointment_child_item.xml
@@ -16,9 +16,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/dp4"
-            android:layout_marginEnd="@dimen/dp4"
             android:layout_marginStart="@dimen/dp4"
+            android:layout_marginEnd="@dimen/dp4"
+            android:layout_marginBottom="@dimen/dp4"
             android:background="@drawable/result_white_box_copy"
             android:orientation="vertical">
 
@@ -36,8 +36,8 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginEnd="@dimen/dp3"
                 android:layout_marginStart="@dimen/dp3"
+                android:layout_marginEnd="@dimen/dp3"
                 android:background="@color/tagColor" />
 
             <Button
@@ -50,11 +50,12 @@
                 android:textAllCaps="false"
                 android:textColor="@color/red"
                 android:textSize="@dimen/sp12" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginEnd="@dimen/dp3"
                 android:layout_marginStart="@dimen/dp3"
+                android:layout_marginEnd="@dimen/dp3"
                 android:background="@color/tagColor" />
 
             <Button
@@ -72,6 +73,68 @@
         </LinearLayout>
     </FrameLayout>
 
+    <!--<FrameLayout-->
+        <!--android:id="@+id/right_swipe_layout"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_marginStart="@dimen/dp4"-->
+            <!--android:layout_marginEnd="@dimen/dp4"-->
+            <!--android:layout_marginBottom="@dimen/dp4"-->
+            <!--android:background="@drawable/result_white_box_copy"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<Button-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:background="@color/transparent"-->
+                <!--android:textAllCaps="false"-->
+                <!--android:textColor="@color/tagColor"-->
+                <!--android:textSize="@dimen/sp12" />-->
+
+            <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="1dp"-->
+                <!--android:layout_marginStart="@dimen/dp3"-->
+                <!--android:layout_marginEnd="@dimen/dp3"-->
+                <!--android:background="@color/tagColor" />-->
+
+            <!--<Button-->
+                <!--android:id="@+id/appointmentDelete"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:background="@color/transparent"-->
+                <!--android:text="@string/delete"-->
+                <!--android:textAllCaps="false"-->
+                <!--android:textColor="@color/red"-->
+                <!--android:textSize="@dimen/sp12" />-->
+
+            <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="1dp"-->
+                <!--android:layout_marginStart="@dimen/dp3"-->
+                <!--android:layout_marginEnd="@dimen/dp3"-->
+                <!--android:background="@color/tagColor" />-->
+
+            <!--<Button-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:background="@color/transparent"-->
+                <!--android:textAllCaps="false"-->
+                <!--android:textColor="@color/tagColor"-->
+                <!--android:textSize="@dimen/sp12" />-->
+
+
+        <!--</LinearLayout>-->
+    <!--</FrameLayout>-->
+
+
     <FrameLayout
         android:id="@+id/front_layout"
         android:layout_width="match_parent"
@@ -81,9 +144,9 @@
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp4"
-            android:layout_marginEnd="@dimen/dp7"
             android:layout_marginStart="@dimen/dp7"
+            android:layout_marginEnd="@dimen/dp7"
+            android:layout_marginBottom="@dimen/dp4"
             android:background="@drawable/result_white_box"
             android:orientation="vertical">
 
@@ -97,8 +160,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:paddingLeft="@dimen/dp2"
                     android:paddingStart="@dimen/dp2"
+                    android:paddingLeft="@dimen/dp2"
                     android:paddingTop="@dimen/dp2"
                     app:srcCompat="@drawable/result_blue_line"
                     tools:ignore="ContentDescription,RtlSymmetry" />
@@ -110,8 +173,8 @@
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/bluelineImageView"
                     android:layout_toRightOf="@id/bluelineImageView"
-                    android:paddingLeft="@dimen/dp13"
                     android:paddingStart="@dimen/dp13"
+                    android:paddingLeft="@dimen/dp13"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp13"
                     app:customFont="@string/roboto_medium"
@@ -143,8 +206,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="13dp"
                     android:layout_marginRight="13dp"
-                    android:layout_toLeftOf="@+id/appointmentTime"
                     android:layout_toStartOf="@+id/appointmentTime"
+                    android:layout_toLeftOf="@+id/appointmentTime"
                     android:visibility="gone"
                     app:srcCompat="@drawable/waiting"
                     tools:ignore="ContentDescription"
@@ -169,24 +232,24 @@
                 android:id="@+id/patientDetailsClickLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp6"
                 android:clickable="true"
-                android:focusable="true"
-                android:layout_marginBottom="@dimen/dp6">
+                android:focusable="true">
 
                 <com.rescribe.doctor.ui.customesViews.CircularImageView
                     android:id="@+id/patientImageView"
                     android:layout_width="@dimen/dp67"
                     android:layout_height="@dimen/dp67"
-                    android:layout_marginLeft="@dimen/dp10"
                     android:layout_marginStart="@dimen/dp10"
+                    android:layout_marginLeft="@dimen/dp10"
                     tools:src="@drawable/uren_pic" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp11"
                     android:layout_marginStart="@dimen/dp11"
+                    android:layout_marginLeft="@dimen/dp11"
                     android:layout_toEndOf="@id/patientImageView"
                     android:layout_toRightOf="@id/patientImageView"
                     android:orientation="vertical"
@@ -196,12 +259,12 @@
                         android:id="@+id/patientNameTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/sp15"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:paddingEnd="@dimen/dp6"
                         android:paddingRight="@dimen/dp6"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/sp15"
                         app:customFont="@string/roboto_bold"
                         tools:text="Mr. Uren Chhadva" />
 
@@ -271,16 +334,16 @@
                 android:id="@+id/blueLineDivider"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp1"
-                android:layout_marginEnd="@dimen/dp2"
                 android:layout_marginStart="@dimen/dp2"
+                android:layout_marginEnd="@dimen/dp2"
                 android:background="@color/tagColor" />
 
             <LinearLayout
                 android:id="@+id/patientInfoDetailLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dp8"
-                android:layout_marginTop="@dimen/dp3">
+                android:layout_marginTop="@dimen/dp3"
+                android:layout_marginBottom="@dimen/dp8">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -292,9 +355,9 @@
                         android:id="@+id/patientPhoneNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/mobile_icon"
                         android:drawableLeft="@drawable/mobile_icon"
                         android:drawablePadding="@dimen/dp9"
-                        android:drawableStart="@drawable/mobile_icon"
                         android:textColor="@color/rating_color"
                         android:textSize="@dimen/sp12"
                         app:customFont="@string/roboto_medium"
@@ -312,10 +375,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginEnd="@dimen/dp10"
-                    android:layout_marginLeft="@dimen/dp20"
-                    android:layout_marginRight="@dimen/dp10"
                     android:layout_marginStart="@dimen/dp20"
+                    android:layout_marginLeft="@dimen/dp20"
+                    android:layout_marginEnd="@dimen/dp10"
+                    android:layout_marginRight="@dimen/dp10"
                     android:layout_weight=".6"
                     android:gravity="center"
                     android:orientation="horizontal">
