--- a/app/src/main/res/layouts/patient/patient_appointment/layout/template_content_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/template_content_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -20,6 +20,7 @@
         tools:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:ignore="ObsoleteLayoutParam" />
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/emptyListView"
@@ -37,5 +38,44 @@
             android:orientation="vertical"
             tools:ignore="ContentDescription" />
     </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp40"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:paddingStart="@dimen/dp2"
+        android:paddingEnd="@dimen/dp2"
+        android:paddingBottom="@dimen/dp2">
 
-</LinearLayout>
+        <Button
+            android:id="@+id/addNewTempButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp2"
+            android:layout_weight="1"
+            android:background="@drawable/button_selector"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/add_new_temp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp14"
+            android:visibility="visible"
+            tools:visibility="visible" />
+
+        <Button
+            android:id="@+id/notifyDelayButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp2"
+            android:layout_weight="1"
+            android:background="@drawable/button_selector"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/notify_delay"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp14"
+            android:visibility="visible"
+             />
+
+    </LinearLayout>
+
+</RelativeLayout>
